--- a/appTemplate/LoginViewController.xib
+++ b/appTemplate/LoginViewController.xib
@@ -218,8 +218,11 @@
 						<string key="NSFrame">{{60, 313}, {200, 30}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
 						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
+						<object class="NSColor" key="IBUIBackgroundColor">
+							<int key="NSColorSpace">1</int>
+							<bytes key="NSRGB">MC4yNjIxODYwMzIzIDAuNDIyNjE2NDM1MyAwLjcxMzI1MTUyODUAA</bytes>
+						</object>
 						<bool key="IBUIOpaque">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 						<int key="IBSegmentControlStyle">2</int>
